[gd_scene load_steps=8 format=3 uid="uid://clvrj5bp170cw"]

[ext_resource type="Theme" uid="uid://c3hg6ndkr8syx" path="res://themes/trivitime.tres" id="1_kddn8"]
[ext_resource type="Script" path="res://scripts/trivitime/tt_plr_customization.gd" id="2_dkxfn"]
[ext_resource type="Texture2D" uid="uid://cexcmdj13x6vu" path="res://assets/sprites/trivitime-icon.svg" id="4_l0coh"]
[ext_resource type="PackedScene" uid="uid://d07oe55owlkpm" path="res://scenes/scene_button.tscn" id="5_ycs2h"]
[ext_resource type="Texture2D" uid="uid://b7ot082q27nuv" path="res://assets/sprites/play.svg" id="6_6x7kc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yol30"]
bg_color = Color(0.4, 0.588235, 0.211765, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sdemu"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="tt_plr_customization" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kddn8")
script = ExtResource("2_dkxfn")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.54902, 0.733333, 0.321569, 1)

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -312.5
offset_top = 30.0
offset_right = 312.5
offset_bottom = 111.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 72
text = "Before we begin.."

[node name="subheading" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -337.0
offset_top = 118.0
offset_right = 337.0
offset_bottom = 175.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.858824, 0.858824, 0.858824, 1)
theme_override_font_sizes/font_size = 48
text = "Give your player some flair!"
horizontal_alignment = 1

[node name="instructions" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = 439.0
offset_right = 253.0
offset_bottom = 511.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "!icon [id] [color]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="templateIcon" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
offset_left = 40.0
offset_top = 48.0
offset_right = 160.0
offset_bottom = 168.0
pivot_offset = Vector2(64, 64)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_yol30")

[node name="TextureRect" type="TextureRect" parent="templateIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="templateIcon"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -27.0
offset_right = -7.0
offset_bottom = 28.0
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="templateColor" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(360, 120)
layout_mode = 2
offset_left = 1520.0
offset_top = 48.0
offset_right = 1880.0
offset_bottom = 168.0
pivot_offset = Vector2(64, 64)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_yol30")

[node name="Panel" type="Panel" parent="templateColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sdemu")

[node name="Label" type="Label" parent="templateColor"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -27.0
offset_right = -10.0
offset_bottom = 28.0
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "RED"
horizontal_alignment = 2
vertical_alignment = 1

[node name="IconContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -492.0
offset_right = 540.0
offset_bottom = 492.0
grow_vertical = 2
theme_override_constants/h_separation = 65
theme_override_constants/v_separation = 24
columns = 3

[node name="ColorContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1520.0
offset_top = -492.0
offset_right = 1880.0
offset_bottom = 492.0
grow_vertical = 2
theme_override_constants/h_separation = 65
theme_override_constants/v_separation = 24

[node name="PlayerContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -354.0
offset_top = -294.0
offset_right = 354.0
offset_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 150
theme_override_constants/v_separation = 119
columns = 3

[node name="Player" type="TextureRect" parent="PlayerContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("4_l0coh")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="PlayerContainer/Player"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.0
offset_top = 15.0
offset_right = 145.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1

[node name="SineComponent" type="Node" parent="PlayerContainer/Player"]

[node name="Player2" type="TextureRect" parent="PlayerContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("4_l0coh")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="PlayerContainer/Player2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.0
offset_top = 15.0
offset_right = 145.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1

[node name="SineComponent" type="Node" parent="PlayerContainer/Player2"]

[node name="Player3" type="TextureRect" parent="PlayerContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("4_l0coh")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="PlayerContainer/Player3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.0
offset_top = 15.0
offset_right = 145.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1

[node name="SineComponent" type="Node" parent="PlayerContainer/Player3"]

[node name="Player4" type="TextureRect" parent="PlayerContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("4_l0coh")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="PlayerContainer/Player4"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.0
offset_top = 15.0
offset_right = 145.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1

[node name="SineComponent" type="Node" parent="PlayerContainer/Player4"]

[node name="Control" type="Control" parent="PlayerContainer"]
layout_mode = 2

[node name="Player5" type="TextureRect" parent="PlayerContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("4_l0coh")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="PlayerContainer/Player5"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.0
offset_top = 15.0
offset_right = 145.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1

[node name="SineComponent" type="Node" parent="PlayerContainer/Player5"]

[node name="Player6" type="TextureRect" parent="PlayerContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("4_l0coh")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="PlayerContainer/Player6"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.0
offset_top = 15.0
offset_right = 145.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1

[node name="Player7" type="TextureRect" parent="PlayerContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("4_l0coh")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="PlayerContainer/Player7"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.0
offset_top = 15.0
offset_right = 145.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1

[node name="SineComponent" type="Node" parent="PlayerContainer/Player7"]

[node name="Player8" type="TextureRect" parent="PlayerContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("4_l0coh")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="PlayerContainer/Player8"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.0
offset_top = 15.0
offset_right = 145.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1

[node name="SineComponent" type="Node" parent="PlayerContainer/Player8"]

[node name="SceneButton" parent="." instance=ExtResource("5_ycs2h")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -28.0
offset_right = 142.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
icon = ExtResource("6_6x7kc")
flat = true
icon_alignment = 1
expand_icon = true
Scene = "res://scenes/trivitime/tt_questions.tscn"
color = Color(0.34902, 0.52549, 0.278431, 1)
